@@ -161,6 +161,7 @@ Processor performance counters are configured in the {\tt <cpu>} nodes. The user
  \item {\tt number} ({\em in range 1..N, where N is the number of configured sets}) All tasks will start using the set specified by number.
  \item {\tt block} Each task will start using the given sets distributed in blocks ({\em i.e.}, if two sets are defined and there are four running tasks: tasks 1 and 2 will use set 1, and tasks 3 and 4 will use set 2).
  \item {\tt cyclic} Each task will start using the given sets distributed cyclically ({\em i.e.}, if two sets are defined and there are four running tasks: tasks 1 and 3 will use, and tasks 2 and 4 will use set 2).
+ \item {\tt random} Each task will start using a random set, and also calls either to {\tt Extrae\_next\_hwc\_set} or {\tt Extrae\_previous\_hwc\_set} will change to a random set.
 \end{itemize}
 
 Each set contain a list of performance counters to be gathered at different instrumentation points (see sections \ref{sec:XMLSectionMPI}, \ref{sec:XMLSectionOpenMP} and \ref{sec:XMLSectionUF}). If the tracing library is compiled to support PAPI, performance counters must be given using the canonical name (like PAPI\_TOT\_CYC and PAPI\_L1\_DCM), or the PAPI code in hexadecimal format (like 8000003b and 80000000, respectively)\footnote{Some architectures do not allow grouping some performance counters in the same set.}. If the tracing library is compiled to support PMAPI, only one group identifier can be given per set\footnote{Each group contains several performance counters} and can be either the group name (like pm\_basic and pm\_hpmcount1) or the group number (like 6 and 22, respectively). 
